--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,7 +4,6 @@ body {
   background-color: #666666;
   font-size: 1;
   font-family: 'Montserrat, sans-serif;
-  font-weight: 400;
 }
 
 main, header, footer {
@@ -16,7 +15,7 @@ main, header, footer {
 }
 
 footer {
-  paddin-top: 3rem;
+  padding-top: 3rem;
 }
 
 p {
@@ -40,12 +39,8 @@ h2 {
   margin: 1rem
 }
 
-.info < h3 {
+.info h3 {
   color: #efefef;
   background-color: #666666;
   margin-bottom: 0.2;
-}
-
-.footer {
-
 }
