--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,8 +1,8 @@
 body {
   background-image: url('c:\code\wu1-validation\img/IMG_20200727_113945.jpg');
   background-size: cover;
-  background-color: #666666;
-  font-size: 1;
+  background-color: #d4d4d4;
+  font-size: 1rem;
   font-family: 'Montserrat, sans-serif;
 }
 
@@ -10,8 +10,8 @@ main, header, footer {
   width: 80%;
   margin: 0 auto;
   padding: 1rem;
-  background-color: rgba(66, 66, 66, 0.4);
-  color: #efefef;
+  background-color: rgba(255, 255, 255, 0.4);
+  color: #2b2b2b;
 }
 
 footer {
@@ -40,7 +40,7 @@ h2 {
 }
 
 .info h3 {
-  color: #efefef;
-  background-color: #666666;
+  color: #222222;
+  background-color: #dfdfdf;
   margin-bottom: 0.2;
 }
