--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   background-image: url('c:\code\wu1-validation\img/IMG_20200727_113945.jpg');
   background-size: cover;
-  background-color: #d4d4d4;
+  background-color: #f7f7f7bd;
   font-size: 1rem;
   font-family: 'Montserrat, sans-serif;
 }
