--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,9 +1,10 @@
 body {
   background-image:url('../img/Image.jpg');
   background-size: cover;
-  background-color: #66666666;
+  background-color: #42424266;
   font-size: 1rem;
   font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
 }
 
 main, header, footer {
@@ -11,11 +12,12 @@ main, header, footer {
   margin: 0 auto;
   padding: 1rem;
   background-color: rgba(255, 255, 255, 0.4);
-  color: #2b2b2b;
+  color: #efefef;
 }
 
 footer {
   padding-top: 3rem;
+  font-size: 0.8rem;
 }
 
 p {
@@ -39,8 +41,8 @@ h2 {
   margin: 1rem
 }
 
-.info h3 {
-  color: #222222;
-  background-color: #dfdfdf;
-  margin-bottom: 0;
+.info > h3 {
+  color: #efefef;
+  background-color: #666666;
+  margin-bottom: 0.2;
 }
