--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,23 +1,22 @@
 body {
   background-image:url('../img/Image.jpg');
   background-size: cover;
-  background-color: #42424266;
   font-size: 1rem;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
+  line-height: 1.5;
 }
 
 main, header, footer {
   width: 80%;
   margin: 0 auto;
   padding: 1rem;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: #2c2c2c;
   color: #efefef;
 }
 
 footer {
   padding-top: 3rem;
-  font-size: 0.8rem;
 }
 
 p {
