--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -25,10 +25,12 @@ p {
 
 h1 {
   font-size: 3rem;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h2 {
   border-bottom: 2px solid #efefef;
+  font-family: 'Montserrat', sans-serif;
 } 
 
 .lead {
