--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -12,7 +12,7 @@ main, header, footer {
   width: 80%;
   margin: 0 auto;
   padding: 1rem;
-  background-color: #2c2c2c;
+  background-color:rgb(22, 22, 22, 0.9);
   color: #efefef;
 }
 
